# wm_1

./: .gitignore  README.md  jepa.py  pyproject.toml  train.py  train.sh
config/train/: lewm.yaml
config/train/data/: pusht.yaml
doc/: flow.md  walkthrough.md
